--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,4 +1,3 @@
-/* Основной стиль страницы */
 .home {
   min-height: 100vh;
   display: flex;
@@ -15,7 +14,6 @@
   text-align: center;
 }
 
-/* Контейнер для карты */
 .home-map-container {
   position: relative;
   width: 85%;
@@ -23,10 +21,9 @@
   height: 600px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
 }
 
-/* Кнопки для карты */
 .fullscreen-btn, .reset-btn {
   background-color: #836666;
   color: white;
@@ -40,51 +37,33 @@
 }
 
 .fullscreen-btn {
-  top: 10px;
-  right: 10px;
+  top: 20px;
+  left: 20px;
 }
 
 .reset-btn {
-  top: 10px;
-  right: 100px;
+  top: 20px;
+  left: 160px;
 }
 
-/* Легенда */
-.home-legend {
-  position: absolute;
-  bottom: 10px;
-  left: 60%;
-  transform: translateX(-50%);
-  padding: 10px;
-  background: white;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  width: 60%;
-  max-width: 1200px;
-  font-size: 14px;
-  text-align: center;
-}
-
-.home-legend h4 {
-  margin: 0;
-  color: #333;
+label {
   font-size: 16px;
+  margin-bottom: 10px;
+  display: block;
+  color: #2c3e50;
 }
 
-.legend-bar {
-  height: 10px;
-  margin: 8px 0;
-  background: linear-gradient(to right, #f2f2f2, #e31a1c, #bd0026);
+select {
+  margin-bottom: 20px;
+  padding: 8px 12px;
+  font-size: 16px;
+  border: 1px solid #ccc;
   border-radius: 5px;
+  width: 300px;
 }
 
-.legend-labels {
-  display: flex;
-  justify-content: space-between;
-  font-size: 12px;
-  color: #333;
+select:focus {
+  outline: none;
+  border-color: #556b8d;
+  box-shadow: 0px 0px 5px rgba(85, 107, 141, 0.5);
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> bc08205 (upd)
